Fixing nav highlight/selection & anchor code alignment

--- a/frontend/styles/_content.sass
+++ b/frontend/styles/_content.sass
@@ -58,8 +58,8 @@ body#home .content
       font-size: 0.95em
       top: -3px
   
-  p :not(pre) > code 
-      top: 8px
+  p:not(pre) > code, 
+      top: 0px
       position: relative
       width: auto
 
